# umarise

./: .env  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: publish-pypi.yml  sync-github-action.yml  sync-verify-anchoring.yml
anchoring-examples/: README.md  example-artifact.txt
anchoring-spec/: CNAME  README.md  index.html
anchoring-spec/one-page/: index.html
anchoring-spec/proof-container/: index.html  spec.md
anchoring-spec/v1.0/: iec.md  index.html
cli/github-action/: README.md  action.yml  package.json
cli/node/: README.md  package.json
docs/: PRIVATE-strategic-bundle.md  README.md  anchoring-examples-README.md  api-truth-table.md  app-experience-briefing.md  app-experience-final.md  architecture-executive-summary.md  architecture-privacy-positioning.md  architecture-v1-pilot.md  architecture-v1-technical.md  architecture-v2-vision.md  architecture-week1-final.md  audit-four-layers-march-2026.md  audit-primitive-or-product-march-2026.md  b2c-inventory-v0.md  backlog.md  blogpost-proof-of-existence.md  briefing-api-reference-framework-failuremodes.md  briefing-duplicate-hash-constraint.md  briefing-ots-priority-batching.md  briefing-ots-worker-fix-paginatie.md  briefing-site-v2.md  briefing-template-frictie-analyse-17feb.md  build-brief-response.md  bulk-anchoring-workflow.md  canon-v4.md  canon-v5.md  certificate-v1.3-spec.md  cli-nodejs-spec.md  competitive-analysis-10-10.md  complete-briefing-v4.md  copywriter-briefing.md  core-infrastructure-plan.md  core-quickstart.md  core-technical-inventory-v2.md  core-technical-inventory.md  core-validation-complete.md  core-vs-companion.md  creation-integrity-positioning.md  cto-overview.md  (+112 more)
public/: manifest.json  openapi.yaml  origin-registry-hall-v4.html  robots.txt  sitemap.xml  umarise-pwa-design-reference.html
public/docs/: data-flow-diagram.html  itexisted-architecture.html  self-proving-artifact-visual.html  strategic-position.html  umarise-architecture-overview.html  umarise-data-flow-visual.html  verification-flows-overview.html  verification-flows.html
public/templates/: test_integration.py  test_integration_node.js  umarise-integration.js  umarise_integration.py
scripts/: anchor-dir.sh  attest-origin.sh  check-status.sh  download-proofs.sh  load-test-authenticated.js  load-test-core-api.js  verify-anchor.py  verify-anchor.sh
sdk/node/: README.md  package.json  umarise-core.ts
sdk/python/: .gitignore  LICENSE  README.md  pyproject.toml  umarise.py  umarise_core.py
src/: App.tsx  index.css  temp-reference.html
src/components/: ArchitectureGate.tsx  DemoModeToggle.tsx  InternalGate.tsx  OnePager.tsx  PageHeader.tsx  PinGate.tsx
src/contexts/: DemoModeContext.tsx  KaartenbakContext.tsx
src/hooks/: useAuth.ts  useClaimAnonymousMarks.ts  useMarkCount.ts  useMarks.ts  usePages.ts  useProofPolling.ts  useResolvedImageUrl.ts  useTrash.ts
src/lib/: artifactCache.ts  certificate.ts  certificateService.ts  citeToSource.ts  companionProxy.ts  coreApi.ts  crypto.ts  deviceFingerprint.ts  deviceId.ts  exportService.ts  haptics.ts  imageCompression.ts  indexedDB.ts  mockData.ts  originHash.ts  originId.ts  originLink.ts  originZip.ts  otsProof.ts  pageService.ts  passkeyStore.ts  preflightCheck.ts  relatedPages.ts  supabaseRequest.ts  testData.ts  testDataInjector.ts  thumbnailService.ts  webauthn.ts
src/pages/: About.tsx  Anchor.tsx  AnchoringWhy.tsx  ApiReference.tsx  ApiReferenceV2.tsx  Architecture.tsx  Blog.tsx  (+62 more)
supabase/: config.toml
verify-anchoring/: CNAME  README.md  SECURITY.md  index.html
(+262 files in other folders)
