[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umarise"
version = "1.0.0"
description = "Minimal SDK for the Umarise Core v1 origin attestation API. Zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Umarise", email = "partners@umarise.com"}
]
keywords = ["umarise", "anchoring", "origin", "attestation", "proof", "opentimestamps", "sha256"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://umarise.com"
Documentation = "https://umarise.com/api-reference"
Repository = "https://github.com/umarise/python-sdk"
